--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
-    "qrcode": "^1.4.4"
+    "qrcode": "^1.4.4",
+    "request": "^2.88.0"
   }
 }
